Basic curvature down!

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset=utf-8>
 		<title>&#65279;</title>
-		<link rel="shortcut icon" type="image/x-icon" href="icons/yuen.png" />
+		<!-- <link rel="shortcut icon" type="image/x-icon" href="icons/yuen.png" /> -->
 		<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<div>
+<!-- 		<div>
 			<img id="title" src="icons/title.png"/>
-		</div>
-		<div id="searchBarDiv">
+		</div> -->
+		<!-- <div id="searchBarDiv">
 			<div id="inputWrapper">
 				<input id="searchBar" type="input" placeholder="search for a song..."></input>
 			</div>
@@ -26,7 +26,7 @@
 			<div id="pause-play">
 				<img id="pause-play-icon" src="icons/pause-play.png"/>
 			</div>
-		</div>
+		</div> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="js/three.js"></script>
 		<script src="js/TrackballControls.js"></script>
