--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
+		
+<!-- 		<div class="rangeslider"> 
+  			<input type="range" min=".01" max="2" value=".01"
+                  class="myslider" id="sliderRange"> 
+  		<p>&Omega; = <span id="demo"></span></p> 
+		</div>  -->
+		<!-- <form action="#"> -->
+    	<!-- <p class="range-field"> -->
+      <input type="range" id="test5" min=".5" max="2", value=1. />
+      <p>&Omega; = <span id="demo"></span></p> 
+    	<!-- </p> -->
+  	<!-- </form> -->
 <!-- 		<div>
 			<img id="title" src="icons/title.png"/>
 		</div> -->
@@ -27,12 +39,12 @@
 				<img id="pause-play-icon" src="icons/pause-play.png"/>
 			</div>
 		</div> -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 		<script src="js/three.js"></script>
 		<script src="js/TrackballControls.js"></script>
-		<script src="js/musicVis.js"></script>
-		<script src="js/audioSetup.js"></script>
+		<!-- <script src="js/musicVis.js"></script> -->
+		<!-- <script src="js/audioSetup.js"></script> -->
 		<script src="js/threejsSetup.js"></script>
-		<script src="js/searchBar.js"></script>
+		<!-- <script src="js/searchBar.js"></script> -->
 	</body>
 </html>
